# wastewatchers

./: .env.example  .env.local.example  .gitignore  AGENTS.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  pytest.ini
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
backend/src/: main.py
backend/src/api/: approvals.py  demo.py  errors.py  shipments.py  telemetry.py
backend/src/config/: __init__.py  destination_assumptions.py
backend/src/models/: approval.py  assessment.py  (+5 more)
backend/tests/: conftest.py
docs/: data-retention.md  demo-ops-dashboard.md  site-manager-control-center.md
frontend/: app.py
frontend/components/: control_center.py  demo_controls.py  pallet_visualization.py  recommendation_panel.py  shipment_table.py  telemetry_charts.py
frontend/services/: wastewatchers_client.py
frontend/tests/: test_approval_client.py  test_dashboard_components.py  test_demo_dashboard_components.py
specs/001-salvage-rerouting-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-demo-ops-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-site-manager-control-center/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  visual-verification.md
src/app/: layout.tsx  page.tsx
(+63 files in other folders)
