[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wastewatchers"
version = "0.1.0"
description = "WasteWatchers salvage rerouting dashboard for cold-chain crop shipments."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.7",
  "streamlit>=1.36",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.setuptools.packages.find]
include = ["backend*", "frontend*"]

